@@ -7,11 +7,13 @@
 ###############################################################################
 
 bin.includes = feature.xml,\
-               feature.properties
+               feature.properties,\
+               about.html
 
 src.includes = .classpath,\
                .project,\
                ChangeLog,\
                build.properties,\
                feature.properties,\
-               feature.xml
+               feature.xml,\
+               about.html
