@@ -2,7 +2,7 @@
 <feature
       id="org.eclipse.cdt.rpm"
       label="%featureName"
-      version="1.2.0"
+      version="3.0.0"
       provider-name="Eclipse.org">
    <install-handler/>
 
